# Beacon

./: .gitignore  README.md  pyproject.toml  run
.github/workflows/: release.yml
beacon/: __init__.py  __main__.py  app.py  journal.py
beacon/assets/: world_map.txt
beacon/services/: backup.py  block_cache.py  electrumx.py  firewall.py  geolocation.py  logs.py  map_renderer.py  pricing.py  rpc.py  system.py
docs/: INSTALL.md
lynx_tui/: __main__.py  app.py
lynx_tui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lynx_tui/services/: rpc.py
scripts/: bootstrap.sh  electrumx-install.sh  installer.sh  lynx-wallet-backup.sh
system/: lynx-sync-wait.service  lynx-sync-wait.timer  lynx-tui.service
