[project]
name = "beacon"
 version = "0.1.0"
description = "Beacon blockchain node TUI"
 readme = "README.md"
 requires-python = ">=3.9"
dependencies = [
  "textual>=0.78.0",
  "requests>=2.31.0",
  "pyproj>=3.0.0",
  "shapely>=2.0.0",
]
 
 [build-system]
 requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["."]
include = ["beacon*"]
